infrastructure/gatekeeper/tests/host-namespaces/fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: my-app
spec:
  hostPID: true
  containers:
    - name: app
      image: nginx:1.27
