infrastructure/gatekeeper/tests/host-namespaces/pass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: my-app
spec:
  hostPID: false
  hostIPC: false
  containers:
    - name: app
      image: nginx:1.27
